--- a/Challenges/Grocery shopping/index.html
+++ b/Challenges/Grocery shopping/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container">
         <div>
-            <h1>Grocery Shoping</h1>
+            <h1>Grocery Shopping</h1>
         </div>
         <div style="background-color: #ffffffe3; height: 500px;">
         <div class="left-container">
